Reworked the way that low level injection occurs so that it happens uniformly through the IInjectionHelper.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -68,16 +68,18 @@
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
     <Compile Include="KernelFactory\ExpressionSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\FallbackToTransformOnNullTargetTask.cs" />
+    <Compile Include="KernelFactory\IInjectionHelper.cs" />
     <Compile Include="KernelFactory\IInjectionSubtask.cs" />
     <Compile Include="KernelFactory\ILabelCache.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
+    <Compile Include="KernelFactory\InjectionHelper.cs" />
     <Compile Include="KernelFactory\ISourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\LegendaryLabels.cs" />
     <Compile Include="KernelFactory\LabelCache.cs" />
     <Compile Include="KernelFactory\MemberConditionSubtask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
     <Compile Include="KernelFactory\SourceMemberAssignSubtask.cs" />
-    <Compile Include="KernelFactory\SourceMemberMergeSubtask.cs" />
+    <Compile Include="KernelFactory\SourceMemberInjectionSubtask.cs" />
     <Compile Include="KernelFactory\SourceMemberTransformSubtask.cs" />
     <Compile Include="KernelFactory\ValueSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\SingleInstanceShardCategorySubtask.cs" />
@@ -101,8 +103,6 @@
     <Compile Include="Configuration\TargetFinderRegistration.cs" />
     <Compile Include="KernelFactory\AutoInjectionTaskDetail.cs" />
     <Compile Include="KernelFactory\AutoInjectionTask.cs" />
-    <Compile Include="KernelFactory\AutoInjectionTaskMergeDetail.cs" />
-    <Compile Include="KernelFactory\AutoInjectionTaskTransformDetail.cs" />
     <Compile Include="KernelFactory\CacheTargetTask.cs" />
     <Compile Include="KernelFactory\FallbackFactoryExpressionFactory.cs" />
     <Compile Include="KernelFactory\InitializeMembersTask.cs" />
