--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="KernelFactory\MemberConditionSubtaskTests.cs" />
     <Compile Include="KernelFactory\MemberInjectionTaskTests.cs" />
     <Compile Include="KernelFactory\SourceMemberAssignSubtaskTests.cs" />
+    <Compile Include="KernelFactory\SourceMemberInjectionSubtaskTests.cs" />
     <Compile Include="KernelFactory\ValueSourceExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\ValueSourceMemberTransformSubtaskTests.cs" />
     <Compile Include="KernelFactory\MergeFactoryTests.cs" />
