--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -75,6 +75,7 @@
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="TestTypes\EventTestClass.cs" />
+    <Compile Include="TestTypes\HermitClass.cs" />
     <Compile Include="TestTypes\IBaseTestClass3.cs" />
     <Compile Include="TestTypes\IRegisterTest.cs" />
     <Compile Include="TestTypes\KeyedClass1.cs" />
