--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
     <Compile Include="Kernel\EnumerableInjectionHint.cs" />
+    <Compile Include="Kernel\ExactInjectionResolutionStrategy.cs" />
     <Compile Include="Kernel\InjectionParameters.cs" />
     <Compile Include="Configuration\ActivateFragment.cs" />
     <Compile Include="Configuration\CustomFactoryFragment.cs" />
