--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -83,6 +83,7 @@
     <Compile Include="KernelFactory\SourceMemberInjectionSubtask.cs" />
     <Compile Include="KernelFactory\ValueSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\SingleInstanceShardCategorySubtask.cs" />
+    <Compile Include="Kernel\CachingInjectionStore.cs" />
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
     <Compile Include="Kernel\EnumerableInjectionHint.cs" />
